# envertor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
envertor/: checker.py  cli.py  core.py  gitignore.py  scanner.py  scanner.py.bkup
tests/: test_basic.py
