[project]
name = "envertor"
version = "0.1.1"
description = "Generate example .env files from existing .env files with placeholder detection."
authors = [
    { name = "Samin Yeasar", email = "syeasar.kuet@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []
keywords = ["dotenv", "env", "environment", "cli", "devtools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/Y3454R/envertor"
Repository = "https://github.com/Y3454R/envertor"

[project.scripts]
envertor = "envertor.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

